# systemssummer2025

final_project_sitecheck/: Cargo.toml  README.md  urls.txt
final_project_sitecheck/src/: main.rs
module1/: Cargo.toml
module1/guess_game/src/: main.rs
module1/number_analyzer/src/: main.rs
module1/temperature_converter/src/: main.rs
module2/: Cargo.toml
module2/sum_with_step/: Cargo.toml
module2/sum_with_step/src/: main.rs
module2/word_frequency_ctr/: Cargo.toml
module2/word_frequency_ctr/src/: main.rs
module3/: Cargo.toml
module3/book_catalog/src/: main.rs
