[package]
name = "sitecheck"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "2.9.7", features = ["json", "tls"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5.18", features = ["derive"] }
ctrlc = "3.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.8.3", features = ["chrono_0_4"] }

[dev-dependencies]
httpmock = "0.7.0"
